--- a/css/style.scss
+++ b/css/style.scss
@@ -293,7 +293,7 @@ h3 {
 .header__top-phone {
     display: none;
 
-    @media (min-width: 1100px) {
+    @media (min-width: 1200px) {
         & {
             display: block;
         }
@@ -314,7 +314,7 @@ h3 {
     height: 25px;
     background-color: transparent;
 
-    @media (min-width: 1100px) {
+    @media (min-width: 1200px) {
         & {
             display: none;
         }
@@ -578,19 +578,6 @@ h3 {
         min-width: 185px;
         min-height: 215px;
         margin: 0px 0px 30px 0px;
-
-        @media (any-hover: hover) {
-            &:hover {
-                .pluses__front {
-                    transform: translate(-50%, -50%) rotateY(180deg);
-                    opacity: 0;
-                }
-                .pluses__back {
-                    transform: translate(-50%, -50%) rotateY(0deg);
-                    opacity: 1;
-                }
-            }
-        }
     }
 
     .pluses__image {
@@ -651,6 +638,19 @@ h3 {
         }
         .pluses__content li {
             margin: 0px 0px 0px 0px;
+
+            @media (any-hover: hover) {
+                &:hover {
+                    .pluses__front {
+                        transform: translate(-50%, -50%) rotateY(180deg);
+                        opacity: 0;
+                    }
+                    .pluses__back {
+                        transform: translate(-50%, -50%) rotateY(0deg);
+                        opacity: 1;
+                    }
+                }
+            }
         }
     }
 }
@@ -1340,7 +1340,13 @@ p {
             padding: 10px 20px;
             border-radius: 40px;
             &:not(:last-child) {
-                margin: 0px 20px 0px 0px;
+                margin: 0px 0px 20px 0px;
+            }
+
+            @media (min-width: 590px) {
+                &:not(:last-child) {
+                    margin: 0px 20px 0px 0px;
+                }
             }
         }
 
